# Chess-Game

./: CMakeLists.txt  README.md  main.cpp  resource.qrc
include/: bishop.h  chessWindow.h  king.h  knight.h  pawn.h  pieces.h  queen.h  rooke.h
src/: CMakeLists.txt  bishop.cpp  chessWindow.cpp  king.cpp  knight.cpp  pawn.cpp  pieces.cpp  queen.cpp  rooke.cpp
